fix: Align text to left for link buttons
Longer shortlinks look nicer when broken into several lines.

--- a/resources/static/styles.css
+++ b/resources/static/styles.css
@@ -62,6 +62,7 @@ a {
   border: none;
   color: light-dark(blue, #3391ff);
   text-decoration: underline;
+  text-align: left;
   cursor: pointer;
 }
 
